fixing; items alignment

--- a/testing_ground/rantaian-blok/src/components/css/header.css
+++ b/testing_ground/rantaian-blok/src/components/css/header.css
@@ -10,7 +10,7 @@
 }
 
 .h1-one {
-    text-align-last: left;
+    align-self: left;
     justify-self: left;
     font-size: calc(20px + 2vmin);
 }
